--- a/HCIProject/app/src/main/res/layout/activity_main.xml
+++ b/HCIProject/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:background="@android:color/black"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -33,6 +33,7 @@
 
     <TextView
         android:text="@string/left_right"
+        android:fontFamily="sans-serif"
         android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
 
     <TextView
         android:text="@string/first_message"
+        android:fontFamily="sans-serif"
         android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
