--- a/HCIProject/app/src/main/res/layout/activity_main.xml
+++ b/HCIProject/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:background="@color/background"
+    android:background="@colors/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,25 +11,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="project.hci.hciproject.MainActivity">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_next"
-        android:id="@+id/imageView2"
-        android:layout_marginBottom="82dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="22dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_back"
-        android:id="@+id/imageView3"
-        android:layout_marginStart="18dp"
-        android:layout_alignTop="@+id/imageView2"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="@string/left_right"
@@ -54,5 +35,24 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="84dp"
         android:id="@+id/textView3" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_back"
+        android:id="@+id/imageButton"
+        android:layout_above="@+id/tilt_main"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="32dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_next"
+        android:layout_marginEnd="26dp"
+        android:id="@+id/imageButton2"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
