--- a/HCIProject/app/src/main/res/layout/activity_main.xml
+++ b/HCIProject/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_back"
+        android:id="@+id/imageButton"
+        android:layout_above="@+id/tilt_main"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="32dp" />
+
     <TextView
         android:text="@string/first_message"
         android:fontFamily="sans-serif"
@@ -32,25 +41,15 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="84dp"
-        android:id="@+id/textView3" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/ic_back"
-        android:id="@+id/imageButton"
-        android:layout_above="@+id/tilt_main"
+        android:id="@+id/textView3"
+        android:layout_above="@+id/imageButton"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="32dp" />
+        android:layout_marginBottom="21dp" />
 
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_next"
-        android:layout_marginEnd="26dp"
         android:id="@+id/imageButton2"
         android:layout_alignTop="@+id/imageButton"
         android:layout_alignParentEnd="true" />
