--- a/HCIProject/app/src/main/res/layout/item_contact.xml
+++ b/HCIProject/app/src/main/res/layout/item_contact.xml
@@ -6,21 +6,21 @@
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:background="@color/cardview_dark_background"
     >
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_marginLeft="90dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp">
 
-    <TextView
-        android:id="@+id/item_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+    </android.support.v7.widget.CardView>
 
-    <Button
-        android:id="@+id/message_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textSize="10sp"
-        />
 </LinearLayout>
+
