--- a/HCIProject/app/src/main/res/layout/activity_filter.xml
+++ b/HCIProject/app/src/main/res/layout/activity_filter.xml
@@ -6,10 +6,16 @@
     tools:context=".FilterActivity"
     android:id="@+id/relativelayout1">
 
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_next"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvItems"
         android:scrollbars="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
+
 
 </RelativeLayout>
