--- a/HCIProject/app/src/main/res/layout/item_contact.xml
+++ b/HCIProject/app/src/main/res/layout/item_contact.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:background="@color/cardview_dark_background">
+    android:background="@color/background">
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_gravity="center"
