--- a/HCIProject/app/src/main/res/layout/activity_filter.xml
+++ b/HCIProject/app/src/main/res/layout/activity_filter.xml
@@ -7,8 +7,8 @@
     android:id="@+id/relativelayout1">
 
     <ImageView
-        android:layout_width="400dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_next"/>
 
     <android.support.v7.widget.RecyclerView
