--- a/HCIProject/app/src/main/res/layout/item_contact.xml
+++ b/HCIProject/app/src/main/res/layout/item_contact.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:background="@color/background">
@@ -15,9 +15,11 @@
 
         <TextView
             android:id="@+id/item_name"
+            android:textSize="24sp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1"/>
+            android:layout_centerHorizontal="true"
+            android:layout_weight="4"/>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
