--- a/HCIProject/app/src/main/res/layout/item_contact.xml
+++ b/HCIProject/app/src/main/res/layout/item_contact.xml
@@ -19,6 +19,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerHorizontal="true"
+            android:textAlignment="center"
             android:layout_weight="4"/>
     </android.support.v7.widget.CardView>
 
