--- a/HCIProject/app/src/main/res/layout/activity_bar.xml
+++ b/HCIProject/app/src/main/res/layout/activity_bar.xml
@@ -4,17 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BarActivity"
-    android:id="@+id/relativelayout1">
+    android:id="@+id/relativelayout1"
+    android:background="@color/background">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_next"/>
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/rightarrow" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvItems"
         android:scrollbars="vertical"
-        android:layout_width="fill_parent"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
         android:layout_height="fill_parent"/>
 
 
