--- a/HCIProject/app/src/main/res/layout/activity_drink.xml
+++ b/HCIProject/app/src/main/res/layout/activity_drink.xml
@@ -10,6 +10,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvItems"
         android:scrollbars="vertical"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"/>
 
