--- a/HCIProject/app/src/main/res/layout/activity_drink.xml
+++ b/HCIProject/app/src/main/res/layout/activity_drink.xml
@@ -8,8 +8,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_next"/>
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvItems"
