--- a/HCIProject/app/src/main/res/layout/activity_bar_results.xml
+++ b/HCIProject/app/src/main/res/layout/activity_bar_results.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_bar_results"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarActivity"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:id="@+id/relativelayout1"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="project.hci.hciproject.BarResultsActivity"
     android:background="@color/background">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvItems"
-        android:scrollbars="vertical"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/barResultsRV"/>
 
 </RelativeLayout>
