--- a/HCIProject/app/src/main/res/layout/activity_price_range.xml
+++ b/HCIProject/app/src/main/res/layout/activity_price_range.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".DrinkActivity"
     android:id="@+id/relativelayout1"
     android:background="@color/background">
@@ -12,7 +16,7 @@
         android:scrollbars="vertical"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"/>
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
