--- a/HCIProject/app/src/main/res/layout/activity_list_drinks_add.xml
+++ b/HCIProject/app/src/main/res/layout/activity_list_drinks_add.xml
@@ -8,12 +8,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="project.hci.hciproject.list_drinks_add">
+    tools:context="project.hci.hciproject.ListDrinkResultsActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/listDrinksRV"/>
 </RelativeLayout>
