--- a/HCIProject/app/src/main/res/layout/activity_list_drinks_add.xml
+++ b/HCIProject/app/src/main/res/layout/activity_list_drinks_add.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     tools:context="project.hci.hciproject.ListDrinkResultsActivity">
 
     <android.support.v7.widget.RecyclerView
