--- a/HCIProject/app/src/main/res/layout/activity_bar.xml
+++ b/HCIProject/app/src/main/res/layout/activity_bar.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarActivity"
+    tools:context=".views.bar.BarActivity"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
