--- a/HCIProject/app/src/main/res/layout/activity_bar_results.xml
+++ b/HCIProject/app/src/main/res/layout/activity_bar_results.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="project.hci.hciproject.BarResultsActivity"
+    tools:context="project.hci.hciproject.views.bar_results.BarResultsActivity"
     android:background="@color/background">
 
     <android.support.v7.widget.RecyclerView
