--- a/HCIProject/app/src/main/res/layout/activity_drink_type.xml
+++ b/HCIProject/app/src/main/res/layout/activity_drink_type.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context=".BarActivity"
+    tools:context=".views.bar.BarActivity"
     android:id="@+id/relativelayout1"
     android:background="@color/background">
 
