--- a/HCIProject/app/src/main/res/layout/activity_main.xml
+++ b/HCIProject/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.hci.hciproject.MainActivity">
+    tools:context="project.hci.hciproject.views.main_activity.MainActivity">
 
     <ImageView
         android:layout_width="match_parent"
