--- a/HCIProject/app/src/main/res/layout/activity_price_range.xml
+++ b/HCIProject/app/src/main/res/layout/activity_price_range.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context=".DrinkActivity"
+    tools:context=".views.drink.DrinkActivity"
     android:id="@+id/relativelayout1"
     android:background="@color/background">
 
